[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytrng"
version = "0.0.1b1"
authors = [
  { name="Gregor Gottschewski", email="gregorgott.software@icloud.com" },
]
description = "A small true random number generator."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gregor-gottschewski/pytrng"
"Bug Tracker" = "https://github.com/gregor-gottschewski/pytrng/issues"