[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytrng"
version = "0.0.2"
authors = [
  { name="Gregor Gottschewski", email="contact@gregors-computer-lab.com" },
]
description = "A small true random number generator for eductional usage."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gregor-gottschewski/pytrng"
"Bug Tracker" = "https://github.com/gregor-gottschewski/pytrng/issues"